@@ -3,6 +3,12 @@ NEWS - OpenPrinting CUPS Filters v1.0.40 - 2013-10-10
 
 CHANGES IN V1.0.41
 
+	- pdftoippprinter: New filter for PPD-less printing. The filter
+	  will be configured as System-V interface script for a print
+	  queue for a discovered IPP network printer generated by
+	  cups-browsed.
+	- rastertopclx: Added support for PPD-less printing. Without
+	  PPD the filter generates PCL 5e.
 	- cups-browsed: Fixed socket leaks in recent IPP subscriptions
 	  changes. Thanks to Tim Waugh from Red Hat for the patch (Red
 	  Hat bug #1021512).
